--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,10 +11,10 @@
     <header class="header">
         <div class="container">
             <h1>Mi Blog Personal</h1>
-            <nav class="nav">
+            <!--<nav class="nav">
                 <a href="#about">Sobre mí</a>
                 <a href="#posts">Publicaciones</a>
-            </nav>
+            </nav>-->
         </div>
     </header>
 
