--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Mi Blog</title>
     <link rel="stylesheet" href="styles.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Droid+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1>Mi Blog Personal</h1>
+            <h1>Coffee Loop Dereference</h1>
             <!--<nav class="nav">
                 <a href="#about">Sobre mí</a>
                 <a href="#posts">Publicaciones</a>
