--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Blog</title>
+    <title>Stiff's blog</title>
     <link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="images/favicon.png">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Droid+Sans&display=swap" rel="stylesheet">
 	<style>
@@ -147,7 +148,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Mi Blog Personal. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Coffee Loop Dereference. Todos los derechos reservados.</p>
         </div>
     </footer>
 
