feat: format files

--- a/index.html
+++ b/index.html
@@ -58,17 +58,14 @@
 				<div class="about-container">
 					<img src="images/me.JPG" alt="Mi foto" class="profile-pic">
 					<div class="social-links">
-						<a href="https://www.instagram.com/stiff.is/?hl=es" target="_blank"
-							class="social-link">
+						<a href="https://www.instagram.com/stiff.is/?hl=es" target="_blank" class="social-link">
 
 							<i class="fab fa-instagram"></i> Instagram
 						</a>
-						<a href="https://github.com/stiffis" target="_blank"
-							class="social-link">
+						<a href="https://github.com/stiffis" target="_blank" class="social-link">
 							<i class="fab fa-github"></i> GitHub
 						</a>
-						<a href="https://linkedin.com/in/tuusuario" target="_blank"
-							class="social-link">
+						<a href="https://linkedin.com/in/tuusuario" target="_blank" class="social-link">
 							<i class="fab fa-linkedin"></i> LinkedIn
 						</a>
 						<a href="mailto:steveildefonso90@gmail.com" class="social-link">
